SEC-1100: Added support for <access-denied-handler>  element which can take a ref or an error-page attribute.